# revisit

./: README.md  docker-compose.dev.yml  manage.py  pyproject.toml
bot/: Dockerfile  bot.py  pyproject.toml
revisit/: asgi.py  settings.py  urls.py  wsgi.py
server/: Dockerfile  pyproject.toml
server/revisit/: settings.py  urls.py
server/spots/: admin.py  enums.py  models.py  pagination.py  urls.py
server/spots/api/: permissions.py  serializers.py  views.py
server/spots/management/commands/: precompute_windows.py
server/spots/utils/: exif.py  geo.py  sun.py  weather.py
